# CodeBoarding

./: .codespellrc  .gitignore  500_python_repositories_github_organizations.csv  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  abstract.py  azure_app.py  azure_deploy.sh  demo.py  diagram_generator.py  duckdb_crud.py  generate_markdown.py  github_action.py  llms.txt  local.settings.json  local_app.py  logging_config.py  main.py  markitdown_diagram.md  palindrome.py  pyproject.toml  repos.csv  requirements.txt  setup.py  static_analysis_config.yml  utils.py  vscode_constants.py  vscode_runnable.py
.codeboarding/: AI_Agent_Core.json  AI_Agent_Core.md  AI_Analysis_Engine.json  AI_Analysis_Engine.md  AI_Interpretation_Engine.json  AI_Interpretation_Engine.md  AI_Interpretation_Layer.json  AI_Interpretation_Layer.md  API_Service.json  API_Service.md  Agent Orchestration.md  Agent System.md  Agent_Orchestration_Workflow.json  Agent_Orchestration_Workflow.md  Code Exploration Tools.md  CodeBoarding Core Agent.md  Codebase Interaction Tools.md  Codebase_Interaction_Analysis_Layer.json  Codebase_Interaction_Analysis_Layer.md  External Interaction Utilities.md  Job_Database.json  Job_Database.md  Orchestration_Engine.json  Orchestration_Engine.md  Orchestration_Workflow.json  Orchestration_Workflow.md  Orchestrator.json  Orchestrator.md  Output_External_Services.json  Output_External_Services.md  Output_Generation_Engine.json  Output_Generation_Engine.md  Output_Generator.json  Output_Generator.md  Outreach & Utility Services.md  PR & Repository Utility.md  Repository_Manager.json  Repository_Manager.md  Specialized Analysis Agents.md  Specialized_AI_Agents.json  (+14 more)
agent/: __init__.py  prompts.py  tools.py
agents/: abstraction_agent.py  agent.py  agent_responses.py  details_agent.py  diff_analyzer.py  markdown_enhancement.py  meta_agent.py  planner_agent.py  prompts.py  validator_agent.py
diagram_analysis/: __init__.py  analysis_json.py  diagram_generator.py  version.py
dummy_repo/: a.py  b.py  c.py
output_generators/: html.py  (+5 more)
(+55 files in other folders)
