[project]
name = "codeboarding"
version = "0.2.0"
description = "🪄 Interactive Diagrams for Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "async-timeout==4.0.3",
    "azure-functions==1.23.0",
    "docker==7.1.0",
    "dotenv==0.9.9",
    "duckdb==1.3.1",
    "dulwich==0.22.8",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.14",
    "gcloud==0.18.3",
    "gitpython==3.1.44",
    "google-cloud==0.34.0",
    "google-genai==1.10.0",
    "gql==3.5.3",
    "grpc-stubs==1.53.0.6",
    "grpcio-tools==1.71.2",
    "hishel==0.1.2",
    "id==1.5.0",
    "injector==0.21.0",
    "ipykernel==6.29.5",
    "isort==6.0.1",
    "jiter==0.10.0",
    "jsonschema==4.25.0",
    "langchain-anthropic==0.3.18",
    "langchain-aws==0.2.27",
    "langchain-community==0.3.27",
    "langchain-google-genai==2.1.4",
    "langchain-ollama==0.3.6",
    "langchain-openai==0.3.28",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markitdown==0.1.1",
    "memory-profiler==0.61.0",
    "networkx==3.4.2",
    "opencensus-ext-azure==1.1.14",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pathlib==1.0.1",
    "pathspec==0.12.1",
    "py2puml==0.10.0",
    "pydot==3.0.4",
    "pyinstaller==6.13.0",
    "pylint==3.3.6",
    "pyright==1.1.403",
    "pytest==8.3.5",
    "python-call-graph==2.1.3",
    "pyyaml==6.0.3",
    "regex==2024.11.6",
    "rich==12.6.0",
    "sqlparse==0.5.3",
    "tomli==2.2.1",
    "trustcall==0.0.39",
    "typer==0.9.4",
    "types-protobuf==5.29.1.20250403",
    "uml-class-diagram-generator==0.1",
    "unearth==0.17.5",
    "uuid==1.30",
    "uvicorn==0.23.2",
    "wcwidth==0.2.13",
]

[project.urls]
Repository = "https://github.com/CodeBoarding/CodeBoarding"
Documentation = "https://github.com/CodeBoarding/CodeBoarding/blob/main/.codeboarding/overview.md"

[[tool.uv.index]]
name = "pypi"
default = true
url = "https://pypi.org/simple"
